edit codes