@@ -8,13 +8,16 @@ import com.turkcell.customerservice.services.dtos.requests.addressRequests.Updat
 import com.turkcell.customerservice.services.dtos.responses.addressResponses.*;
 import com.turkcell.customerservice.services.mappers.AddressMapper;
 import com.turkcell.customerservice.services.rules.AddressBusinessRules;
+import io.github.ertansidar.exception.type.BusinessException;
 import io.github.ertansidar.paging.PageInfo;
 import io.github.ertansidar.response.GetListResponse;
+import io.github.ertansidar.response.ListResponse;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
@@ -29,79 +32,55 @@ public class AddressServiceImpl implements AddressService {
 
     @Override
     public GetListResponse<GetAllAddressResponse> getAll(PageInfo pageInfo) {
-        GetListResponse<GetAllAddressResponse> response = new GetListResponse<>();
-        Pageable pageable = PageRequest.of(pageInfo.getPage(), pageInfo.getSize());
-        Page<Address> addresses = addressRepository.findAllIfDeletedDateIsNull(pageable);
-        response.setItems(addresses.stream()
-                .map(AddressMapper.INSTANCE::getAllAddressResponseFromAddress).collect(Collectors.toList()));
-        response.setTotalElements(addresses.getTotalElements());
-        response.setTotalPage(addresses.getTotalPages());
-        response.setSize(addresses.getSize());
-        response.setHasNext(addresses.hasNext());
-        response.setHasPrevious(addresses.hasPrevious());
-        return response;
+      return ListResponse.get(pageInfo, addressRepository, AddressMapper.INSTANCE::getAllAddressResponseFromAddress);
     }
 
     @Override
     public GetAddressResponse getById(UUID id) {
         addressBusinessRules.addressNotFound(id);
-        addressBusinessRules.addressIsDeleted(id);
 
-        Address foundAddress = addressRepository.findById(id).get();
-        GetAddressResponse getAddressResponse = AddressMapper.INSTANCE.getAddressResponseFromAddress(foundAddress);
-        return getAddressResponse;
+        Address foundAddress = addressRepository.findById(id)
+                .orElseThrow(() -> new BusinessException("Address not found"));
+        return AddressMapper.INSTANCE.getAddressResponseFromAddress(foundAddress);
     }
 
     @Override
-    public CreatedAddressResponse add(CreateAddressRequest createAddressRequest) {
+    public CreatedAddressResponse add(CreateAddressRequest request) {
         Address address =
-                AddressMapper.INSTANCE.addressFromCreateAddressRequest(createAddressRequest);
-        address.setCreatedDate(LocalDateTime.now());
+                AddressMapper.INSTANCE.addressFromCreateAddressRequest(request);
         address.setId(UUID.randomUUID());
         Address createdAddress = addressRepository.save(address);
-        CreatedAddressResponse createdAddressResponse =
-                AddressMapper.INSTANCE.createdAddressResponseFromAddress(createdAddress);
-        return createdAddressResponse;
+        return AddressMapper.INSTANCE.createdAddressResponseFromAddress(createdAddress);
     }
 
     @Override
-    public UpdatedAddressResponse update(UpdateAddressRequest updateAddressRequest, UUID id) {
+    public UpdatedAddressResponse update(UpdateAddressRequest request, UUID id) {
         addressBusinessRules.addressNotFound(id);
         addressBusinessRules.addressIsDeleted(id);
 
-        Address foundAddress = addressRepository.findById(id).get();
+        Address foundAddress = addressRepository.findById(id)
+                .orElseThrow(() -> new BusinessException("Address not found"));
 
         Address address =
-                AddressMapper.INSTANCE.addressFromUpdateAddressRequest(updateAddressRequest);
+                AddressMapper.INSTANCE.addressFromUpdateAddressRequest(request);
         address.setId(foundAddress.getId());
-        address.setCreatedDate(foundAddress.getCreatedDate());
-        address.setUpdatedDate(LocalDateTime.now());
 
         Address updatedAddress = addressRepository.save(address);
-        UpdatedAddressResponse updatedAddressResponse =
-                AddressMapper.INSTANCE.updatedAddressResponseFromAddress(updatedAddress);
-        return updatedAddressResponse;
+        return AddressMapper.INSTANCE.updatedAddressResponseFromAddress(updatedAddress);
     }
 
+    @Transactional
     @Override
-    public DeletedAddressResponse delete(UUID id) {
+    public void delete(UUID id) {
         addressBusinessRules.addressNotFound(id);
         addressBusinessRules.addressIsDeleted(id);
-
-        Address foundAddress = addressRepository.findById(id).get();
-        foundAddress.setDeletedDate(LocalDateTime.now());
-        Address deletedAddress = addressRepository.save(foundAddress);
-
-        DeletedAddressResponse deletedAddressResponse =
-                AddressMapper.INSTANCE.deletedAddressResponseFromAddress(deletedAddress);
-        return deletedAddressResponse;
+        addressRepository.softDelete(id, LocalDateTime.now(), AuditAwareImpl.USER);
     }
 
     @Override
     public List<GetAddressByCustomerIdResponse> getByCustomerId(UUID customerId) {
         List<Address> addresses = this.addressRepository.findByCustomerId(customerId);
-        List<GetAddressByCustomerIdResponse> getAddressByCustomerIdResponse = addresses
-                .stream().map(AddressMapper.INSTANCE::getAddressByCustomerIdResponseFromAddress).collect(Collectors.toList());
-        return getAddressByCustomerIdResponse;
+        return addresses
+                .stream().map(AddressMapper.INSTANCE::getAddressByCustomerIdResponseFromAddress).toList();
     }
 }
